--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>todomvc by dohaivu</title>
+    <title>TodoMVC by dohaivu</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
@@ -15,7 +15,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>todomvc</h1>
+        <h1>TodoMVC</h1>
         <p></p>
 
         <p class="view"><a href="https://github.com/dohaivu/todomvc">View the Project on GitHub <small>dohaivu/todomvc</small></a></p>
@@ -28,7 +28,9 @@
         </ul>
       </header>
       <section>
-        
+        <div>
+          <a href="/angularjs/app/index.html">AngularJS</a>
+        </div>
       </section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/dohaivu">dohaivu</a></p>
