--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       </header>
       <section>
         <div>
-          <a href="/angularjs/app/index.html">AngularJS</a>
+          <a href="/todomvc/angularjs/app/index.html">AngularJS</a>
         </div>
       </section>
       <footer>
